revised search-engine-optimization from class to id to make the nav bar link direct to the correct section.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="hero"></main>
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
